syntax = "proto2";

message EventEnvelope {
  enum Type {
    ProtoBuf = 1;
    JSON = 2;
    TOML = 3;
  }

  optional Type type = 1;
  optional bytes payload = 2;
  optional uint64 timestamp = 3;
  optional string member_id = 4;
  optional string service = 5;
  optional uint64 incarnation = 6;
  optional uint64 sequence_id = 7;
}

message SysInfo {
  optional string ip = 1;
  optional string hostname = 2;
  optional string gossip_ip = 3;
  optional string gossip_port = 4;
  optional string http_gateway_ip = 5;
  optional string http_gateway_port = 6;
}

// ideally we would pull this PackageIdent definition from builder-protocol
message PackageIdent {
  optional string origin = 1;
  optional string name = 2;
  optional string version = 3;
  optional string release = 4;
}

message CensusEntry {
  optional string member_id = 1;
  optional string service = 2;
  optional string group = 3;
  optional string org = 4;
  optional bytes cfg = 5;
  optional SysInfo sys = 6;
  optional PackageIdent pkg = 7;
  optional bool leader = 8;
  optional bool follower = 9;
  optional bool update_leader = 10;
  optional bool update_follower = 11;
  optional bool election_is_running = 12;
  optional bool election_is_no_quorum = 13;
  optional bool election_is_finished = 14;
  optional bool update_election_is_running = 15;
  optional bool update_election_is_no_quorum = 16;
  optional bool update_election_is_finished = 17;
  optional bool initialized = 18;
  optional bool alive = 19;
  optional bool suspect = 20;
  optional bool confirmed = 21;
  optional bool persistent = 22;
  optional bool departed = 23;
}
